--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>INSTAGRAM-Photo-Feed</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light-mode">
     <header id="hero">
         <div>
-            <h1 class="hero_title">"Breath Code Instagram Photo Feed"</h1>
+            <h1 class="hero_title" id="title">
+                <span>Breath Code Instagram Photo Feed</span>
+                <hr>
+            </h1>
+        </div>
+        <div class="social-icons">
+            <div class="tooltip">
+                <span class="tooltiptext">INSTAGRAM</span>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="./imagenes/instagram.png">
+                <i class="fab fa-instagram"></i>
+            </a>
+            </div>
         </div>
     </header>
 
@@ -62,5 +74,6 @@
 
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
